Fix for ingredient list being cut off

--- a/_assets/style.css
+++ b/_assets/style.css
@@ -19,7 +19,7 @@
     --serif: Lora, Georgia, serif;
 
     --step-number-column-width: 3em;
-    --ingredient-quantity-column-width: 5em;
+    --ingredient-quantity-column-width: 8em;
     --ingredient-name-column-width: 10em;
 }
 
